# frediano

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
