[package]
name = "frediano-v2"
version = "0.1.0"
authors = ["christiangroothuis <62361628+christiangroothuis@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }


[build-dependencies]
embuild = "0.30"
anyhow = "1"
